[metadata]
name = lofi
version = attr: lofi.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = lognormal random fields on the sphere
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/lofi
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
py_modules = lofi
